# cereal-optional

./: .gitignore  CMakeLists.txt  README.md
include/cereal_optional/: optional_binary.hpp  optional_json.hpp  optional_nvp.hpp
